--- a/package.json
+++ b/package.json
@@ -5,13 +5,24 @@
   "main": "index.js",
   "author": "Design Freed",
   "license": "MIT",
+  "scripts": {
+    "server": "node server.js",
+    "test": "export NODE_ENV=test && jest --config=jest.config.json --watch"
+  },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
     "mongoose": "^5.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^22.0.1",
+    "jest": "^22.1.4",
+    "expect": "^1.20.2",
+    "supertest": "^2.0.0"
   }
 }
