--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "mongoose": "^5.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "validator": "^9.2.0"
   },
   "devDependencies": {
     "@types/jest": "^22.0.1",
-    "jest": "^22.1.4",
     "expect": "^1.20.2",
+    "jest": "^22.1.4",
     "supertest": "^2.0.0"
   }
 }
