--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jwt-simple": "^0.5.1",
+    "mongodb": "^3.0.1",
     "mongoose": "^5.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
