--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "server": "node server.js",
-    "test": "export NODE_ENV=test && jest --config=jest.config.json --watch"
+    "test": "export NODE_ENV=test && jest --config=jest.config.json --watch",
+    "seed": "export NODE_ENV=dev && node ./seeder/seeds.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
@@ -26,6 +27,7 @@
     "@types/jest": "^22.0.1",
     "expect": "^1.20.2",
     "jest": "^22.1.4",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "mongoose-seed": "^0.4.1"
   }
 }
